@@ -11,8 +11,8 @@
 \mainpage Geographic library
 \author <a href="http://charles.karney.info/">Charles Karney</a>
 <charles@karney.com>
-\version 1.3
-\date 2010-07-21
+\version 1.4
+\date 2010-09-12
 
 \section abstract Abstract
 
@@ -38,10 +38,10 @@ The main project page is at
   http://sourceforge.net/projects/geographiclib </a>
 .
 The code is available for download at
-- <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.3.tar.gz/download">
-  geographiclib-1.3.tar.gz</a>
-- <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.3.zip/download">
-  geographiclib-1.3.zip</a>
+- <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.4.tar.gz/download">
+  geographiclib-1.4.tar.gz</a>
+- <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.4.zip/download">
+  geographiclib-1.4.zip</a>
 .
 as either a compressed tar file (tar.gz) or a zip file.  (The two archives
 have identical contents.)
@@ -156,15 +156,15 @@ Back to \ref intro.  Forward to \ref organization.  Up to \ref contents.
 
 The following steps will get you started with %GeographicLib:
  - Download the
-   <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.3.tar.gz/download">
+   <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.4.tar.gz/download">
    source</a>.
  - Unpack the tar file somewhere convenient with, e.g.,
-   - tar xfpvz geographiclib-1.3.tar.gz
+   - tar xfpvz geographiclib-1.4.tar.gz
    .
-   This will create a geographiclib-1.3 directory.  (Alternatively,
+   This will create a geographiclib-1.4 directory.  (Alternatively,
    download and unpack the zip file.)
- - Change to the geographiclib-1.3 directory
-   - cd geographiclib-1.3
+ - Change to the geographiclib-1.4 directory
+   - cd geographiclib-1.4
  - Create the library and the utility programs
    - make all
    .
@@ -2252,7 +2252,8 @@ Usage: Planimeter [-e a r] [-h]
 Measure the area of a geodesic polygon.  Reads polygon vertices from
 standard input, one per line.  Vertices may be given as latitude and
 longitude, UTM/UPS, or MGRS coordinates (interpreted in the same way as
-GeoConvert).  The end of input, a blank line, or a line which can't be
+GeoConvert).  (MGRS coordinates signify the center of the corresponing
+MGRS square.)  The end of input, a blank line, or a line which can't be
 interpreted as a vertex signals the end of one polygon and the start of
 the next.  For each polygon print a summary line with the number of
 points, the perimeter (in meters), and the area (in meters^2).  Areas
@@ -2449,7 +2450,8 @@ geoid height changes per unit distance along the WGS84 ellipsoid in
 the specified directions).
 
 Positions are given as latitude and longitude, UTM/UPS, or MGRS, in
-any of the formats accepted by GeoConvert.  If the -z option is
+any of the formats accepted by GeoConvert.  (MGRS coordinates signify
+the center of the corresponing MGRS square.)  If the -z option is
 specified then the specified zone is prepended to each line of input
 (which must be in UTM/UPS coordinates).  This allows a file with UTM
 eastings and northings in a single zone to be used as standard input.
@@ -2528,7 +2530,7 @@ list of changes.  (Note: Old versions of the library use a year-month
 style of numbering.  Now, the library uses a major and minor version
 number.)
 
- - <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.4.tar.gz/download">1.4 (not released yet)</a>
+ - <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.4.tar.gz/download">1.4 (current, released 2010-09-12)</a>
   - Changes to GeographicLib::Geodesic and GeographicLib::GeodesicLine:
     - FIX BUG in Geodesic::Inverse with prolate ellipsoids;
     - add area computations to Geodesic::Direct and Geodesic::Inverse;
@@ -2548,15 +2550,15 @@ number.)
     now need to be included).
   - Add the \ref planimeter utility for computing the areas of
     geodesic polygons.
-  - Simplify iterative solution of GeographicLib::Gnomonic::Reverse.
-  - Add Geoid::ConvertHeight.
+  - Improve iterative solution of GeographicLib::Gnomonic::Reverse.
+  - Add GeographicLib::Geoid::ConvertHeight.
   - Add -msltohae, -haetomsl, and -z options to \ref geoideval.
   - Constructors check that minor radius is positive.
   - Add overloaded Forward and Reverse functions to the projection
     classes which don't return the convergence (or azimuth) and scale.
   - Document function parameters and return values consistently.
 
- - <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.3.tar.gz/download">1.3 (current, released 2010-07-21)</a>
+ - <a href="http://sourceforge.net/projects/geographiclib/files/distrib/geographiclib-1.3.tar.gz/download">1.3 (released 2010-07-21)</a>
   - Add GeographicLib::Gnomonic, the ellipsoid generalization of the
     gnomonic projection.
   - Add -g and -e options to \ref equidistanttest.
