@@ -111,9 +111,12 @@ namespace GeographicLib {
       Reverse(lat0, lon0, x, y, lat, lon, azi, rk);
     }
 
+    /** \name Inspector functions
+     **********************************************************************/
+    ///@{
     /**
-     * @return \e a the major radius of the ellipsoid (meters).  This is the
-     *   value inherited from the Geodesic object used in the constructor.
+     * @return \e a the equatorial radius of the ellipsoid (meters).  This is
+     *   the value inherited from the Geodesic object used in the constructor.
      **********************************************************************/
     Math::real MajorRadius() const throw() { return _earth.MajorRadius(); }
 
@@ -124,6 +127,7 @@ namespace GeographicLib {
      **********************************************************************/
     Math::real InverseFlattening() const throw()
     { return _earth.InverseFlattening(); }
+    ///@}
   };
 
 } // namespace GeographicLib
