@@ -245,8 +245,11 @@ namespace GeographicLib {
                         int& zone, bool& northp, real& x, real& y,
                         int& prec, bool centerp = true);
 
+    /** \name Inspector functions
+     **********************************************************************/
+    ///@{
     /**
-     * @return \e a the major radius of the WGS84 ellipsoid (meters).
+     * @return \e a the equatorial radius of the WGS84 ellipsoid (meters).
      *
      * (The WGS84 values is returned because the UTM and UPS projections are
      * based on this ellipsoid.)
@@ -261,6 +264,7 @@ namespace GeographicLib {
      **********************************************************************/
     static Math::real InverseFlattening() throw()
     { return UTMUPS::InverseFlattening(); }
+    ///@}
   };
 
 } // namespace GeographicLib
