@@ -122,9 +122,12 @@ namespace GeographicLib {
       Reverse(northp, x, y, lat, lon, gamma, k);
     }
 
+    /** \name Inspector functions
+     **********************************************************************/
+    ///@{
     /**
-     * @return \e a the major radius of the ellipsoid (meters).  This is the
-     *   value used in the constructor.
+     * @return \e a the equatorial radius of the ellipsoid (meters).  This is
+     *   the value used in the constructor.
      **********************************************************************/
     Math::real MajorRadius() const throw() { return _a; }
 
@@ -141,6 +144,7 @@ namespace GeographicLib {
      * PolarStereographic::SetScale.
      **********************************************************************/
     Math::real CentralScale() const throw() { return _k0; }
+    ///@}
 
     /**
      * A global instantiation of PolarStereographic with the WGS84 ellipsoid
