@@ -6,7 +6,9 @@ For more information, see
 
     http://geographiclib.sourceforge.net/
 
-The current version of the library is 1.3.
+The current version of the library is 1.4.
+
+Changes between 1.4 (released 2010-09-12) and 1.3 versions:
 
 Changes between 1.3 (released 2010-07-21) and 1.2 versions:
 
